[package]
name = "redback-runtime" # change to your liking
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/4tkbytes/dropbear-engine"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
app_dirs2 = "2.5"
bincode = { version = "2.0", features = ["serde"] }
log = "0.4"
log-once = "0.4"
env_logger = "0.11"
hecs = { version = "0.10", features = ["serde"] }
dropbear-engine = { git = "https://github.com/4tkbytes/dropbear" }
eucalyptus = { git = "https://github.com/4tkbytes/dropbear", features = ["data-only"] }
# dropbear-engine = { path = "../dropbear-engine" }
# eucalyptus = { path = "../eucalyptus", features = ["data-only"] }
egui = "0.32"

[patch.crates-io]
russimp-sys = { git = "https://github.com/skillissuedev/russimp-sys" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[package.metadata.android]
package = "com.fourtkbytes.redbackruntime" # change to your liking
build_targets = [ "aarch64-linux-android", "armv7-linux-androideabi" ]
large_heap = true

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[package.metadata.android.application]
extract_native_libs = true

[package.metadata.android.application.activity]
config_changes = "orientation"