[package]
name = "redback-runtime" # change to your liking
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["4tkbytes <4tkbytes@pm.me>"]
repository = "https://github.com/4tkbytes/dropbear-engine"
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
app_dirs2 = "2.5"
bincode = { version = "2.0", features = ["serde"] }
log = "0.4"
hecs = { version = "0.10", features = ["serde"] }
# dropbear-engine = { git = "https://github.com/4tkbytes/dropbear" }
# eucalyptus = { git = "https://github.com/4tkbytes/dropbear" }
dropbear-engine = { path = "../dropbear-engine" }
eucalyptus = { path = "../eucalyptus", features = ["data-only"] }
winit = "0.30"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
android-activity = { version = "0.6", features = [ "game-activity" ] }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15.4"

#[profile.release]
#strip = true

[package.metadata.android]
package = "com.fourtkbytes.redbackruntime" # change to your liking
build_targets = [ "aarch64-linux-android", "armv7-linux-androideabi" ]
large_heap = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
getrandom = { version = "0.3", features = ["wasm_js"] }


[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[package.metadata.android.application]
extract_native_libs = true

[package.metadata.android.application.activity]
config_changes = "orientation"